Fixed checkout heading issues
-Fixed overlapping of heading and cart info heading
-Added 15px to checkout info top value to make border not so thick

--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -33,14 +33,13 @@
 .item-heading,
 .payment-container{
     position: sticky;
-    top: 0;
+    top: var(--header-height);
 }
 
 .payment-container{
     border: var(--border-mid);
-
+    top: calc(var(--header-height) + 15px);
 }
-
 
 .item-card{
     height: 200px;
